corrigindo html da aplicação